Pagina Tabela Veiculos
Atualizada a pasta img com as imagens dos veiculos

criado o tabelaveiculos.html e suas informações

adicionado estilizações no style.css para o tabela veiculos

--- a/style.css
+++ b/style.css
@@ -60,3 +60,26 @@
     background-position: left center;
     background-size:30px;
 }
+
+#veiculos{
+    margin: 0 auto;
+    max-width: 400px;
+}
+
+.tb-veiculos{
+    width: 360px;
+    margin: 20px;
+}
+
+.tb-veiculos, th, td{
+    border: 1px solid black;
+    padding: 2px;
+}
+
+.tb-veiculos, tr{
+    height: 60px;
+}
+
+.img-tabela{
+    width: 100px;
+}
