--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     justify-content: center;
     max-width: 400px;
     margin: auto;
-
 }
 
 .abertura {
@@ -24,7 +23,8 @@
     text-align: center;
     padding: 5px;
 }
-.conteudo{
+
+.conteudo {
     position: absolute;
     top: 220px;
     max-width: 360px;
@@ -32,25 +32,31 @@
     background-color: rgb(233, 233, 38);
 
 }
-.conteudo h2{
-    color:rgb(33, 152, 152);
+
+.conteudo h2 {
+    color: rgb(33, 152, 152);
     text-decoration: underline;
 }
+
 .conteudo p {
     color: rgb(53, 48, 48);
     text-align: justify;
     padding: 10px 5px 10px 0px;
 }
-.conteudo ul{
+
+.conteudo ul {
     list-style-type: none;
 }
-.conteudo ul li{
+
+.conteudo ul li {
     color: rgb(53, 48, 48);
     text-align: justify;
 }
+
 .final {
     position: relative;
 }
+
 .final li {
     margin: 0;
     padding: 10px 0px 10px 30px;
@@ -58,33 +64,36 @@
     background-image: url("https://www.iconpacks.net/icons/1/free-badge-icon-1361-thumb.png");
     background-repeat: no-repeat;
     background-position: left center;
-    background-size:30px;
+    background-size: 30px;
 }
 
-#veiculos{
+#veiculos {
     margin: 0 auto;
     max-width: 400px;
 }
 
-.tb-veiculos{
+.tb-veiculos {
     width: 360px;
     margin: 20px;
 }
 
-.tb-veiculos, th, td{
+.tb-veiculos,
+th,
+td {
     border: 1px solid black;
     padding: 2px;
 }
 
-.tb-veiculos, tr{
+.tb-veiculos,
+tr {
     height: 60px;
 }
 
-.img-tabela{
+.img-tabela {
     width: 100px;
 }
 
-.menu-site a{
+.menu-site a {
     width: 200px;
     color: black;
     display: block;
@@ -96,21 +105,71 @@
     background-color: #ccc;
 }
 
-.menu-site a.ativo{
-    background-color:gray;
+.menu-site a.ativo {
+    background-color: gray;
     color: blue;
 }
 
-.localizacao{
+.localizacao {
     margin: auto;
     justify-content: center;
     width: 400px;
 }
 
-.img-email{
+.img-email {
     width: 90px;
 }
 
-.formulario-contato{
+.formulario-contato {
     margin: 10px 0px 10px 0px;
+}
+
+.card-index {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    max-width: 320px;
+}
+
+.card-index:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-index-dados {
+    padding: 2px 16px;
+}
+
+.imagem-pessoa {
+    border-radius: 5px 5px 0 0;
+    width: 320px;
+}
+
+
+* {
+    box-sizing: border-box;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: auto;
+    padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+}
+
+.titulo-card{
+    text-decoration: underline;
 }
